--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,7 @@
 
 <div class="d-flex flex-column align-items-center mt-3"> 
     <h1>About Me!</h1>
-    <p>Education: </p>
-    <p>Work Experience: </p>
-    <p>Technical Skills: </p>
+    <p>Education: USF Mech E </p>
+    <p>Work Experience: Genspark</p>
+    <p>Technical Skills: Python, Javascript, Java, etc. </p>
 </div>
